[tool.poetry]
name = "fastapi getting started"
version = "0.1.0"
description = ""
authors = ["Sergey Pravdyukov <sergey.pravdyukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
